methods.slug.SlugSnail.scala.error
Erreur de compilation :
SlugSnail:9: error: not enough arguments for method isFacingTrail: (c: java.awt.Color)Boolean.
Unspecified value parameter c.
                            if (isFacingTrail()) {
                                             ^SlugSnail:19: error: not enough arguments for method hunt: (c: java.awt.Color)Unit.
Unspecified value parameter c.
                             hunt();
                                 ^